--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <!-- Right Column: Technologies and Tools -->
             <div class="technologies-tools">
                 <h2>Technical Expertise</h2>
-                <p>Throughout my degree and over the past year, I have expanded my proficiency in several programming languages, continuously refining my coding skills and applying them across various projects and disciplines.</p>
+                <p>Throughout my degree and over the past year, I have expanded my proficiency in several programming languages, continuously refining my coding skills and applying them across various projects and disciplines. I have gained hands-on experience in building robust applications, integrating advanced algorithms, and solving complex technical challenges. </p>
                 
                 <div class="tech-scroll-container">
                     <div class="tech-grid">
