--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </a>
             </div>
             <div class="projectItem">
-                <a href="https://github.com/your-github-username/project-3" target="_blank">
+                <a href="https://github.com/Ahizechi/Javascript" target="_blank">
                     <div class="projectThumbnail">
                         <img src="images\calculator-on-table-free-photo.jpg" alt="Project 3">
                     </div>
