--- a/index.html
+++ b/index.html
@@ -220,15 +220,15 @@
         <div class="contact-form">
             <form id="contactForm">
                 <div class="form-group">
-                    <label for="from_name">Your Name</label>
+                    <label for="from_name">Your Name:</label>
                     <input type="text" id="from_name" name="from_name" required>
                 </div>
                 <div class="form-group">
-                    <label for="subject">Subject</label>
+                    <label for="subject">Subject:</label>
                     <input type="text" id="subject" name="subject" required>
                 </div>
                 <div class="form-group">
-                    <label for="message">Message</label>
+                    <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
                 </div>
                 <button type="submit">Send Message</button>
