--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript">
     (function () {
-        emailjs.init("Zechi");
+        emailjs.init("4mEmboUYSFenSDpI_");
     })();
     </script>
 </head>
@@ -224,13 +224,17 @@
                     <input type="text" id="from_name" name="from_name" required>
                 </div>
                 <div class="form-group">
+                    <label for="reply_to">Your Email:</label>
+                    <input type="email" id="reply_to" name="reply_to" required>
+                </div>
+                <div class="form-group">
                     <label for="subject">Subject:</label>
                     <input type="text" id="subject" name="subject" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="5" required></textarea>
-                </div>
+                </div>                
                 <button type="submit">Send Message</button>
             </form>            
         </div>
