--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <title>Ahizechi Nwankwo | Portfolio</title>
 
     <!-- EmailJS -->
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">
     (function () {
         emailjs.init("4mEmboUYSFenSDpI_");
